--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -306,7 +306,7 @@ en:
           <br/><br/>
           Please log in to your wallet provider and check if there are any pending requirements, forms, notices, or restrictions on your wallet account, or reach out to your wallet provider for assistance.
           <br/><br/>
-          Once everything has been resolved with your wallet provider account, please log in to your Brave Creators account (<a href="https://creators.brave.com">https://creators.brave.com</a>), then disconnect and reconnect your wallet provider account to your Brave Creators account.
+          Once everything has been resolved with your wallet provider account, please log in to your <a href="https://creators.brave.com">Brave Creators account</a>, then disconnect and reconnect your wallet provider account to your Brave Creators account.
           <br/><br/>
           If you’re still having trouble, you can <a href="https://support.brave.com/hc/en-us/requests/new?ticket_form_id=10061687185549">submit a Creators support ticket </a> for further assistance.
           <br/><br/>
