--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -775,9 +775,13 @@ en:
         uphold_error: There was a problem connecting with Uphold. %{message}
         state_mismatch: Specifically, there was a mismatch between our state and Uphold.
         missing_state: There is no state token, this might have happened if you clicked the back button.
+        no_kyc: Make sure to complete ID verification or any other verification requirements on your Uphold account. Once you’re done, you can try connecting your Uphold account to Brave Creators again.
+        limited_functionality: According to Uphold, there are currently some limitations on your Uphold account. This means your Uphold account can’t receive monthly payouts or contributions from users. Please log in to your Uphold account and check whether there are any notices or remaining account requirements to complete, then try again. For example, you may need to submit more information to Uphold.
     gemini_connections:
       new:
         gemini_error: There was a problem connecting with Gemini. %{message}
+        no_kyc: Make sure to complete ID verification or any other verification requirements on your Gemini account. Once you’re done, you can try connecting your Gemini account to Brave Creators again.
+        limited_functionality: According to Gemini, there are currently some limitations on your Gemini account. This means your Gemini account can’t receive monthly payouts or contributions from users. Please log in to your Uphold account and check whether there are any notices or remaining account requirements to complete, then try again. For example, you may need to submit more information to Gemini.
       destroy:
         removed: Removed Gemini Connection
         errors: There were some errors removing your Gemini account. %{errors}
