--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -561,7 +561,7 @@ ja:
       expired_authentication_token:
         expired_error: ログインリンクの有効期限が切れています。 新しいメールを送信してください。
         heading: ログインリンクが期限切れです
-        body: ログインリンクアクセスは30分で有効期限が切れ、1回しか使用できません
+        body: ログインリンクアクセスは3時間で有効期限が切れ、1回しか使用できません
         button: 新しいリンクを送ってください
       require_verified_email:
         email_verification_required: 続行するには、メールアドレスを承認してください。
