--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -675,13 +675,9 @@ en:
     suspended_error:
       heading_html: Your account is under review
       body: >
-        We've noticed some unusual activity on your account. For that reason, we've suspended access while we take a closer look. Reasons may include violations of the <a href="https://support.brave.com/hc/en-us/articles/360029235132"> BAT grant guidelines.</a>
+        We noticed some unusual activity associated with your account. As a result, access to your account has been suspended in order to protect your account and the Brave Creators platform.
         <br/><br/>
-        We know that this is inconvenient and we're sorry about that but we'd rather play it safe than sorry when it comes to protecting your account and Brave Rewards.
-        <br/><br/>
-        If you think you know what might be going on, the fastest way to clear this up is to get in touch with us at <a href="mailto:suspensions@brave.com">suspensions@brave.com</a> where a real human will read and reply to your message.
-
-
+        If you have an idea about what might have triggered this alert, or if you believe your account was mistakenly suspended, you can reach out to us at <a href="mailto:suspensions@brave.com">suspensions@brave.com</a>. A dedicated member of our support team will personally review and respond to your message.
     two_factor_authentication_removal:
       heading: Having trouble with 2-factor authentication?
       leadin: If you've lost your authenticator app or device, access can be restored by removing your 2-factor security settings.
