--- a/config/locales/views/publishers/settings/en.yml
+++ b/config/locales/views/publishers/settings/en.yml
@@ -8,7 +8,7 @@ en:
         delete_account:
           heading: Account Deletion
           intro: |
-            Your channels and all account related information will be permanently deleted from our database as well as from connected providers. This cannot be undone.
+            Your Brave Creators account and information will be permanently deleted from our database. This action cannot be undone.
           button: Delete My Account
           prompt:
             header: Are you sure you want to delete your account?
