--- a/config/locales/views/publishers/settings/ja.yml
+++ b/config/locales/views/publishers/settings/ja.yml
@@ -7,7 +7,7 @@ ja:
           intro: ログイン状態を30日維持する
         delete_account:
           heading: アカウント削除
-          intro: あなたのチャンネルとすべてのアカウント関連情報は、データベースおよび接続されているプロバイダーから完全に削除されます。 これは、元に戻すことはできません。
+          intro: あなたのチャンネルとすべてのアカウント関情報は、データベースおよびされているバ全に削除されます。 これは、元に戻すことはできません.
           button: アカウントを削除する
           prompt:
             header: "アカウントを削除してもよろしいですか？"
