--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -43,6 +43,7 @@ en:
     payments: Payments
     download: Download
     payments: Payments
+    public_page_title: Send Contribution with Web3 Wallet | Brave Creators
     existing_account: Already have an account?
     error: Oh no! Something went wrong, please contact support.
     get_started: Get Started
