--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -617,7 +617,7 @@ en:
       referral_program_winddown: |
         The Referral Program has now ended as of November 24, 2020. Please read <b><a href=%{blog_link}>our blog post</a></b> for more details.
       title: Dashboard
-      add_channel_cta: Add a website or YouTube channel to see how much your fans on Brave have contributed so far.
+      add_channel_cta: Register a website or channel to your Brave Creators account so you can start receiving contributions from your supporters.
       merchant: Merchant Keys
       statements:
         heading: Statements
