Fix font and bullet styling for 2FA email #1876

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -660,7 +660,7 @@ ja:
       heading: 二要素認証に問題がありますか？
       leadin: 認証アプリまたはデバイスを紛失した場合、二要素セキュリティ設定を削除することでアクセスできます。
       note: セキュリティ上の理由から、2要素認証の削除を完了するには、<strong> 2日間の待機期間</strong>が必要です。
-      removals: "<ul><li>アカウントチャンネルを再認証する必要があります。</li><li>アカウントウォレットを再認証する必要があります。</li><li>支払いには30日間の待機期間があります。</li></ul>"
+      removals: "<ol><li>アカウントチャンネルを再認証する必要があります。</li><li>アカウントウォレットを再認証する必要があります。</li><li>支払いには30日間の待機期間があります。</li></ol>"
 
       reminder_body_html: "セキュリティ設定に対して変更しようとしています。%{remainder}では、この後二要素認証がアカウントから削除されます。 二要素認証削除に付随して、以下の点にご注意ください：<ul><li>アカウントチャンネルを再認証する必要があります。</li><li>アカウントウォレットを再認証する必要があります。</li><li>支払いには30日間の待機期間があります。</li></ul>"
       reminder_body_two_html: >
